minimally stripped apsrmplong bst

--- a/mainrep.tex
+++ b/mainrep.tex
@@ -20,15 +20,12 @@
             a4paper,%
             breaklinks,%
             backref=false,%
-            dvips,ps2pdf,%
             pdfhighlight=/I,%
             pdffitwindow=true,%
             pdfstartview=Fit,%
             pdfcenterwindow=true,%
             linkbordercolor={1 0 1},%
-            %colorlinks,%
-            pdftitle=Essential LaTeX Templates,%
-            pdfauthor=P Sunthar]%
+	    pdfusetitle]
             {hyperref}
 
 
@@ -94,7 +91,8 @@ document.
 \include{expt/experimental}
 \include{rnd/results}
 
-\bibliographystyle{chemthes}
+%\bibliographystyle{chemthes}
+\bibliographystyle{iitbauthyr}
 \bibliography{mylit}
 
 
