--- a/mylit.bib
+++ b/mylit.bib
@@ -1,10 +1,12 @@
 @Article{Auth09,
   author       = {First Author and S. Writer and Scientist, Third},
   title	       = {Any title for the article, authors to be separated
-                  by \verb|and|},
+                  by 'and'},
   journal      = {New Journal of Biliography},
   year	       = 2009,
   volume       = 21,
+  number       = 2,
+  doi          = {10.1016/S0006-3495(95)80361-9},
   pages	       = {10-28}
 }
 
@@ -14,7 +16,9 @@
   publisher    = {Random Mouse},
   year	       = 2008,
   address      = {Mumbai},
-  edition      = 3
+  edition      = 3,
+  doi          = {10.1021/ja2076873},
+
 }
 
 
