--- a/mainrep.tex
+++ b/mainrep.tex
@@ -1,4 +1,4 @@
-%%% Time-stamp: <2015-04-14 23:42:45 sunthar>
+%%% Time-stamp: <2015-04-15 00:00:41 sunthar>
 
 %%% $Log:$
 
@@ -48,7 +48,8 @@
 \degree{Doctor of Philosophy}
 \dept{Chemical Engineering}
 
-\makecoverpage
+%\makecoverpage
+\maketitle
 
 \begin{abstract}
 This document contains essential templates required to write technical
