--- a/mylit.bib
+++ b/mylit.bib
@@ -1,24 +1,87 @@
-@Article{Auth09,
-  author       = {First Author and S. Writer and Scientist, Third},
-  title	       = {Any title for the article, authors to be separated
-                  by 'and'},
-  journal      = {New Journal of Biliography},
-  year	       = 2009,
-  volume       = 21,
-  number       = 2,
-  doi          = {10.1016/S0006-3495(95)80361-9},
-  pages	       = {10-28}
+
+@article{Batzri1973,
+  author       = {Batzri, Shmuel and Korn, ED},
+  doi	       = {10.1016/0005-2736(73)90408-2},
+  file	       =
+                  {:home/sunthar/Dropbox/Research/vesicles/papers/spi/N73bba1015-ethanol-injection.pdf:pdf},
+  journal      = {Biochim. Biophys. Acta},
+  pages	       = {1015-1019},
+  title	       = {{Single bilayer liposomes prepared without
+                  sonication}},
+  volume       = 298,
+  year	       = 1973
 }
 
-@Book{Mono08,
-  author       = {Novel Author and Interesting Writer},
-  title	       = {Experiences with Book Writing},
-  publisher    = {Random Mouse},
-  year	       = 2008,
-  address      = {Mumbai},
-  edition      = 3,
-  doi          = {10.1021/ja2076873},
+@InCollection{Sackmann1995a,
+  author       = {Sackmann, E},
+  title	       = {Physical Basis of Self-Organization and Function of
+                  Membranes: Physics of Vesicles},
+  booktitle    = {Structure and Dynamics of Membranes: From Cells to
+                  Vesicles},
+  editor       = {R Lipowsky and E Sackmann},
+  chapter      = 5,
+  pages	       = {213-303},
+  year	       = 1995,
+  volume       = {1A},
+  series       = {Handbook of Biological Physics},
+  publisher    = {Elsevier}
+}
 
+
+
+@Book{Boal2012,
+  author       = {David Boal},
+  title	       = {Mechanics of the Cell},
+  publisher    = {Cambridge},
+  year	       = 2012,
+  edition      = 2
+}
+
+@MastersThesis{jariwala00,
+  author       = {Saurabh Jariwala},
+  title	       = {Lattice Boltzmann Simulation of Lamellar Phase},
+  school       = {Chemical Engineering, Indian Institute of Science},
+  year	       = 2000,
+  address      = {Bangalore, India}
+}
+
+@PhdThesis{luding94,
+  author       = {Luding, S},
+  title	       = {Models and Simulations of Granular Materials},
+  school       = {Albert-{L}udwigs-{U}nivetsit{\"a}t {F}reiburg},
+  year	       = 1994,
+  month	       = {October}
+}
+
+@Misc{Smith99,
+  author       = {Douglas E Smith},
+  year	       = 1999,
+  howpublished = {Private communication},
+  annote       = {Duc At has the communication regarding the details
+                  passed on by Smith}
+}
+
+@Unpublished{SunHI03,
+  author       = {P Sunthar},
+  title	       = {Calculation of fixed point in the Zimm model:
+                  revisited},
+  note	       = {Unpublished notes},
+  year	       = 2003
+}
+
+@InProceedings{rich-mart92,
+  author       = {W. Richman and Richard E. Martin},
+  title	       = {Unconfined granular materials thermalised by
+                  fluctuating horizontal surfaces},
+  booktitle    = {Engineering Mechanics: Proceedings of the Ninth
+                  Conference},
+  organization = {Engineering Mechanics Division},
+  chapter      = 3,
+  pages	       = {900-903},
+  year	       = 1992,
+  editor       = {Loren D. Lutes and John M. Niedzwecki},
+  publisher    = {American Society of Civil Engineers, New York},
+  month	       = {May 24--27}
 }
 
 
