month year in example

--- a/mainrep.tex
+++ b/mainrep.tex
@@ -1,4 +1,4 @@
-%%% Time-stamp: <2015-04-15 00:22:55 sunthar>
+%%% Time-stamp: <2015-04-15 00:55:14 sunthar>
 
 %%% $Log:$
 
@@ -47,6 +47,7 @@
 %\date{\today}
 \degree{Doctor of Philosophy}
 \dept{Chemical Engineering}
+\monthyear{April 2015}
 
 %\makecoverpage
 \maketitle
