testing pruned bst

--- a/mainrep.tex
+++ b/mainrep.tex
@@ -1,4 +1,4 @@
-%%% Time-stamp: <2015-04-15 00:55:14 sunthar>
+%%% Time-stamp: <2015-04-18 08:49:55 sunthar>
 
 %%% $Log:$
 
@@ -43,7 +43,7 @@
 
 \begin{document}
 \title{Essential \LaTeX\ Templates for Report Writing}
-\author{P Sunthar}
+\author{P Sunthar \\ (I06011)}
 %\date{\today}
 \degree{Doctor of Philosophy}
 \dept{Chemical Engineering}
@@ -74,7 +74,8 @@ document.
 \include{expt/experimental}
 \include{rnd/results}
 
-\bibliography{mylit}
+\nocite{*}
+\bibliography{mylit,library}
 
 
 \end{document}
