Pruned bst with url, notes, and eprint removed

--- a/mainrep.tex
+++ b/mainrep.tex
@@ -1,4 +1,4 @@
-%%% Time-stamp: <2015-04-18 08:49:55 sunthar>
+%%% Time-stamp: <2015-04-20 00:01:23 sunthar>
 
 %%% $Log:$
 
@@ -74,8 +74,8 @@ document.
 \include{expt/experimental}
 \include{rnd/results}
 
-\nocite{*}
-\bibliography{mylit,library}
+%\nocite{*}
+\bibliography{mylit}
 
 
 \end{document}
