--- a/mainrep.tex
+++ b/mainrep.tex
@@ -1,4 +1,4 @@
-%%% Time-stamp: <2015-04-20 00:01:23 sunthar>
+%%% Time-stamp: <2015-04-20 00:21:46 sunthar>
 
 %%% $Log:$
 
@@ -74,8 +74,9 @@ document.
 \include{expt/experimental}
 \include{rnd/results}
 
-%\nocite{*}
-\bibliography{mylit}
+\nocite{*}
+%\bibliography{mylit}
+\bibliography{mylit,library}
 
 
 \end{document}
