linked journal/title to url when doi is not there; no explicit URL

--- a/mylit.bib
+++ b/mylit.bib
@@ -45,14 +45,6 @@
   address      = {Bangalore, India}
 }
 
-@PhdThesis{luding94,
-  author       = {Luding, S},
-  title	       = {Models and Simulations of Granular Materials},
-  school       = {Albert-{L}udwigs-{U}nivetsit{\"a}t {F}reiburg},
-  year	       = 1994,
-  month	       = {October}
-}
-
 @Misc{Smith99,
   author       = {Douglas E Smith},
   year	       = 1999,
@@ -67,6 +59,16 @@
                   revisited},
   note	       = {Unpublished notes},
   year	       = 2003
+}
+
+@PhdThesis{luding94,
+  author       = {Luding, S},
+  title	       = {Models and Simulations of Granular Materials},
+  school       = {Albert-{L}udwigs-{U}nivetsit{\"a}t {F}reiburg},
+  year	       = 1994,
+  month	       = {October},
+  url	       =
+                  {http://www2.msm.ctw.utwente.nl/sluding/PAPERS/PhD_Luding.pdf}
 }
 
 @InProceedings{rich-mart92,
