Updated bst file

--- a/mylit.bib
+++ b/mylit.bib
@@ -49,7 +49,7 @@
   author       = {Douglas E Smith},
   year	       = 1999,
   howpublished = {Private communication},
-  annote       = {Duc At has the communication regarding the details
+    note       = {Duc At has the communication regarding the details
                   passed on by Smith}
 }
 
